Refactor maven test configuration.
- Integration tests are executed in integration-test maven phase.
- Unit tests are executed in test maven phase.
- Removed jenkins-integration-tests profile.
- Added fast-tests profile to run all the tests not marked as @Slow.
- Added full-tests profile to runn all the tests.
- Clean pom files from unnecessary test configurations.
- Fix python tests to execute them as slow one in integration-test maven
  phase.

Change-Id: I2e2882326ffdc4524f74d232eae02c87407b430b