@@ -84,10 +84,6 @@
       <plugin>
         <groupId>org.scalatest</groupId>
         <artifactId>scalatest-maven-plugin</artifactId>
-        <configuration>
-          <argLine>-Xmx2g -XX:MaxPermSize=1024m -XX:ReservedCodeCacheSize=1024m</argLine>
-          <htmlreporters>${project.build.directory}/surefire-reports</htmlreporters>
-        </configuration>
       </plugin>
       <plugin>
         <groupId>org.scalastyle</groupId>
